# rdk-raspberrypi-iarmmgrs

./: CONTRIBUTING.md  Makefile.am  NOTICE  README  configure.ac
deepsleep/: Makefile.am  plat-deepsleep.c
ir/: Makefile.am  lirc_key_codes.h  plat-ir.c
power/: Makefile.am  plat-power.c
